New strings added for Junk Filters, CC Publisher, and many typos fixed

--- a/lib/messagebundles/MessagesBundle_es.properties
+++ b/lib/messagebundles/MessagesBundle_es.properties
@@ -85,7 +85,7 @@ GENERAL_BROWSE_HOST_TIP=Ver todos los archivos de la computadora seleccionada.
 #### GENERAL_ADVANCED_SUB_MENU=Advanced
 GENERAL_ADVANCED_SUB_MENU=Avanzado
 #### GENERAL_CLEAR_BUTTON_LABEL=Clear
-#? GENERAL_CLEAR_BUTTON_LABEL=
+GENERAL_CLEAR_BUTTON_LABEL=Limpiar
 
 ################################################################################
 # Key/value pairs for right-click context menus.
@@ -285,7 +285,7 @@ DOWNLOAD_TITLE=Descargas
 #### UPLOAD_TITLE=Uploads
 UPLOAD_TITLE=Cargas
 #### CONSOLE_TITLE=Console
-#? CONSOLE_TITLE=
+CONSOLE_TITLE=Consola
 
 ################################################################################
 # Key/value pairs for the tooltips of the main windows
@@ -299,7 +299,7 @@ CONNECTIONS_TIP=Mostrar conexiones a otros clientes.
 #### LIBRARY_TIP=View Repository of Saved Files
 LIBRARY_TIP=Ver repositorio de archivos guardados.
 #### CONSOLE_TIP=View Log Messages
-#? CONSOLE_TIP=
+CONSOLE_TIP=Ver Mensajes de la bitacora
 
 ################################################################################
 # Key/Value pairs for the pull-down menus in the main window
@@ -402,11 +402,11 @@ MENU_NAV_LIB_MNEMONIC=L
 #### MENU_NAV_LIB_ACCESSIBLE=Display the Library Screen
 MENU_NAV_LIB_ACCESSIBLE=Mostrar la pantalla de biblioteca.
 #### MENU_NAV_CONSOLE=Console
-#? MENU_NAV_CONSOLE=
+MENU_NAV_CONSOLE=Consola
 #### MENU_NAV_CONSOLE_MNEMONIC=O
-#? MENU_NAV_CONSOLE_MNEMONIC=
+MENU_NAV_CONSOLE_MNEMONIC=O
 #### MENU_NAV_CONSOLE_ACCESSIBLE=Display the Console Screen
-#? MENU_NAV_CONSOLE_ACCESSIBLE=
+MENU_NAV_CONSOLE_ACCESSIBLE=Mostrar la pantalla de consola
 
 
 #### MENU_VIEW_TITLE=View
@@ -450,11 +450,11 @@ MENU_VIEW_LIBRARY_MNEMONIC=L
 #### MENU_VIEW_LIBRARY_ACCESSIBLE=Show Library Window
 MENU_VIEW_LIBRARY_ACCESSIBLE=Mostrar ventana de biblioteca.
 #### MENU_VIEW_CONSOLE=Console
-#? MENU_VIEW_CONSOLE=
+MENU_VIEW_CONSOLE=Consola
 #### MENU_VIEW_CONSOLE_MNEMONIC=O
-#? MENU_VIEW_CONSOLE_MNEMONIC=
+MENU_VIEW_CONSOLE_MNEMONIC=O
 #### MENU_VIEW_CONSOLE_ACCESSIBLE=Show Console Window
-#? MENU_VIEW_CONSOLE_ACCESSIBLE=
+MENU_VIEW_CONSOLE_ACCESSIBLE=Mostrar ventana de consola
 #### MENU_VIEW_THEMES_TITLE=Apply Skins
 MENU_VIEW_THEMES_TITLE=Aplicar las carátulas
 #### MENU_VIEW_THEMES_TITLE_MNEMONIC=A
@@ -655,15 +655,15 @@ SEARCH_STOP_BUTTON_LABEL=Detener
 #### SEARCH_STOP_BUTTON_TIP=Stop Collecting Search Results for Selected Tab
 SEARCH_STOP_BUTTON_TIP=Suspender la recopilación de resultados de búsqueda para la ficha seleccionada.
 #### SEARCH_SPAM_MARK_AS_LABEL=Mark As
-#? SEARCH_SPAM_MARK_AS_LABEL=
+SEARCH_SPAM_MARK_AS_LABEL=Marcar como
 #### SEARCH_SPAM_BUTTON_LABEL=Junk
-#? SEARCH_SPAM_BUTTON_LABEL=
+SEARCH_SPAM_BUTTON_LABEL=Basura
 #### SEARCH_NOT_SPAM_BUTTON_LABEL=Not Junk
-#? SEARCH_NOT_SPAM_BUTTON_LABEL=
+SEARCH_NOT_SPAM_BUTTON_LABEL=No es Basura
 #### SEARCH_SPAM_BUTTON_TIP=Mark selected search results as Junk
-#? SEARCH_SPAM_BUTTON_TIP=
+SEARCH_SPAM_BUTTON_TIP=Marcar los resultados seleccionados como Basura
 #### SEARCH_NOT_SPAM_BUTTON_TIP=Mark selected search results as Not Junk
-#? SEARCH_NOT_SPAM_BUTTON_TIP=
+SEARCH_NOT_SPAM_BUTTON_TIP=Marcar los resultados seleccionados como que No son Basura
 #### SEARCH_PUBLIC_KILL_STRING=Close Search
 SEARCH_PUBLIC_KILL_STRING=Cerrar la búsqueda
 #### SEARCH_PUBLIC_LAUNCH_STRING=Launch Action
@@ -822,7 +822,7 @@ RESULT_PANEL_ADDED=Creado
 #### RESULT_PANEL_LICENSE=License
 RESULT_PANEL_LICENSE=Licencia
 #### RESULT_PANEL_SPAM=Junk Rating
-#? RESULT_PANEL_SPAM=
+RESULT_PANEL_SPAM=Puntuación de Basura
 
 #Filter labels
 #### SEARCH_FILTER_ALL=All
@@ -1511,9 +1511,9 @@ LIBRARY_TREE_INDIVIDUALLY_SHARED_FILES_DIRECTORY_TOOLTIP=Lista de Todos los Arch
 # Key/value pairs for strings in the console window
 ################################################################################
 #### CONSOLE_SAVE_BUTTON_LABEL=Save
-#? CONSOLE_SAVE_BUTTON_LABEL=
+CONSOLE_SAVE_BUTTON_LABEL=Guardar
 #### CONSOLE_DIALOG_SAVE_TITLE=Save As
-#? CONSOLE_DIALOG_SAVE_TITLE=
+CONSOLE_DIALOG_SAVE_TITLE=Guardar Como
 
 ################################################################################
 # Key/value pairs for burn cd link
@@ -1948,13 +1948,13 @@ CC_PUBLISHER_LICENSE_ALLOWMOD_LABEL=Permitira modificaciones de su trabajo?
 #### CC_PUBLISHER_LICENSE_ALLOWMOD_SHAREALIKE=ShareAlike
 CC_PUBLISHER_LICENSE_ALLOWMOD_SHAREALIKE=Compartido por Igual
 #### CC_PUBLISHER_LICENSE_VERIFICATION_URL=Where do you want to store the verification URL?
-#? CC_PUBLISHER_LICENSE_VERIFICATION_URL=
+CC_PUBLISHER_LICENSE_VERIFICATION_URL=¿Donde desea guardar la URL de verificación?
 #### CC_PUBLISHER_CC_VERIFICATION_URL_LABEL=What is this?
 CC_PUBLISHER_CC_VERIFICATION_URL_LABEL=¿Qué es esto?
 #### CC_PUBLISHER_LICENSE_VERIFICATION_SELF=I want to host the verification file myself at the following URL:
-#? CC_PUBLISHER_LICENSE_VERIFICATION_SELF=
+CC_PUBLISHER_LICENSE_VERIFICATION_SELF=Yo quiero guardar el archivo de verificación en la siguiente URL:
 #### CC_PUBLISHER_LICENSE_VERIFICATION_ARCHIVE=I want to use the Internet Archive to host the file.
-#? CC_PUBLISHER_LICENSE_VERIFICATION_ARCHIVE=
+CC_PUBLISHER_LICENSE_VERIFICATION_ARCHIVE=Yo quiero utilziar el Internet Archive para guardar el archivo.
 #### CC_PUBLISHER_RDF_OUTPUT=In order to publish your file, please insert the following code in your verification page at:
 CC_PUBLISHER_RDF_OUTPUT=Para publicar su archivo, por favor introduzca el siguiente código en su página de verificación en:
 #### CC_PUBLISHER_COPY_BUTTON=Copy to Clipboard
@@ -1966,38 +1966,38 @@ CC_PUBLISHER_REMOVELICENSE_LABEL=Estáseguro de que desea eliminar permanentement
 #### CC_PUBLISHER_LICENSEREMOVED_LABEL=Please press OK to permanently remove license.
 CC_PUBLISHER_LICENSEREMOVED_LABEL=Por favor presione OK para eliminar permanentemente la licencia.
 #### CC_PUBLISHER_ARCHIVE_USERNAME_LABEL=Username:
-#? CC_PUBLISHER_ARCHIVE_USERNAME_LABEL=
+CC_PUBLISHER_ARCHIVE_USERNAME_LABEL=Nombre de Usuario:
 #### CC_PUBLISHER_ARCHIVE_PASSWORD_LABEL=Password:
-#? CC_PUBLISHER_ARCHIVE_PASSWORD_LABEL=
+CC_PUBLISHER_ARCHIVE_PASSWORD_LABEL=Contraseña:
 #### CC_RDFOUTPUT_TITLE=License RDF Output
 CC_RDFOUTPUT_TITLE=Salida de Licencia RDF
 #### CC_RDF_FINISH_LABEL=Finish
 CC_RDF_FINISH_LABEL=Terminar
 
 #### INTERNETARCHIVE_UPLOADER_TITLE=Upload
-#? INTERNETARCHIVE_UPLOADER_TITLE=
+INTERNETARCHIVE_UPLOADER_TITLE=Cargar
 #### INTERNETARCHIVE_UPLOADER_LABEL=Please wait while LimeWire is uploading your files to the Internet Archive
-#? INTERNETARCHIVE_UPLOADER_LABEL=
+INTERNETARCHIVE_UPLOADER_LABEL=Por favor espere mientras LimeWire esta cargando sus archivos al Internte Archive
 #### INTERNETARCHIVE_UPLOADER_INIT=Connecting to the Internet Archive...
-#? INTERNETARCHIVE_UPLOADER_INIT=
+INTERNETARCHIVE_UPLOADER_INIT=Conectandose al Internet Archive...
 #### INTERNETARCHIVE_UPLOADER_CONNECTED=Connected...
-#? INTERNETARCHIVE_UPLOADER_CONNECTED=
+INTERNETARCHIVE_UPLOADER_CONNECTED=Conectado...
 #### INTERNETARCHIVE_UPLOADER_DIR_CHANGED=Directory changed...
-#? INTERNETARCHIVE_UPLOADER_DIR_CHANGED=
+INTERNETARCHIVE_UPLOADER_DIR_CHANGED=Directorio cambiado...
 #### INTERNETARCHIVE_UPLOADER_FILE_UPLOADING=Uploading file
-#? INTERNETARCHIVE_UPLOADER_FILE_UPLOADING=
+INTERNETARCHIVE_UPLOADER_FILE_UPLOADING=Cargando archivo
 #### INTERNETARCHIVE_UPLOADER_FILE_UPLOADING_OF=of
-#? INTERNETARCHIVE_UPLOADER_FILE_UPLOADING_OF=
+INTERNETARCHIVE_UPLOADER_FILE_UPLOADING_OF=de
 #### INTERNETARCHIVE_UPLOADER_FILE_UPLOADED=Uploaded 
-#? INTERNETARCHIVE_UPLOADER_FILE_UPLOADED=
+INTERNETARCHIVE_UPLOADER_FILE_UPLOADED=Cargado
 #### INTERNETARCHIVE_UPLOADER_FILE_BYTESOF=bytes of
-#? INTERNETARCHIVE_UPLOADER_FILE_BYTESOF=
+INTERNETARCHIVE_UPLOADER_FILE_BYTESOF=bytes de
 #### INTERNETARCHIVE_UPLOADER_COMPLETED=Successfully uploaded files
-#? INTERNETARCHIVE_UPLOADER_COMPLETED=
+INTERNETARCHIVE_UPLOADER_COMPLETED=Archivos cargados con éxito
 #### INTERNETARCHIVE_UPLOADER_CHECKIN=Checking in...
-#? INTERNETARCHIVE_UPLOADER_CHECKIN=
+INTERNETARCHIVE_UPLOADER_CHECKIN=Registrándose...
 #### INTERNETARCHIVE_IDRETRIEVER_TITLE=Requesting Identifier...
-#? INTERNETARCHIVE_IDRETRIEVER_TITLE=
+INTERNETARCHIVE_IDRETRIEVER_TITLE=Pidiendo Identificador...
 
 ################################################################################
 # Key/value pairs for the StandardListEditor reusable component
@@ -2253,7 +2253,7 @@ INVALID_SAVE_DIR_LABEL=El directorio almacenado para guardar archivos no es váli
 # internet
 ################################################################################
 #### NO_INTERNET=Your machine does not appear to have an active Internet connection or a firewall is blocking LimeWire from accessing the internet. Please check your connection or firewall settings and then select "Connect" from the File menu to connect LimeWire to the network.
-NO_INTERNET=Su másuina parece no tener una conexión activa a Internet o un firewall está bloqueando el acceso de LimeWire a Internet. Por favor, verifique la configuración de su conexión o firewall y luego presione "conectar" desde el men "archivo" para conectar a LimeWire a la red.
+NO_INTERNET=Su máquina parece no tener una conexión activa a Internet o un firewall está bloqueando el acceso de LimeWire a Internet. Por favor, verifique la configuración de su conexión o firewall y luego presione "conectar" desde el men "archivo" para conectar a LimeWire a la red.
 
 ################################################################################
 # Key/value pair for the message shown when LimeWire couldn't connect to the
@@ -2261,7 +2261,7 @@ NO_INTERNET=Su másuina parece no tener una conexión activa a Internet o un firew
 # keep trying.
 ################################################################################
 #### NO_INTERNET_RETRYING=Your machine does not appear to have an active Internet connection or a firewall is blocking LimeWire from accessing the internet. LimeWire will automatically keep trying to connect you to the network unless you select "Disconnect" from the File menu.
-NO_INTERNET_RETRYING=Su másuina parece no tener una conexión activa a Internet o un firewall está bloqueando el acceso de LimeWire a Internet. Automásicamente, LimeWire continuará intentando conectarse a la red a menos que seleccione "desconectar" desde el men "archivo".
+NO_INTERNET_RETRYING=Su máquina parece no tener una conexión activa a Internet o un firewall está bloqueando el acceso de LimeWire a Internet. Automásicamente, LimeWire continuará intentando conectarse a la red a menos que seleccione "desconectar" desde el men "archivo".
 
 ################################################################################
 # Key/value pair for the message shown when LimeWire is trying to connect
@@ -2354,7 +2354,7 @@ ERROR_THREE_CHARACTER_SEARCH=Su búsqueda debe tener por lo menos tres caracteres
 #### ERROR_NETWORK_FLOODING=This search may return lots of results and slow the network. Are you sure you want to continue?
 ERROR_NETWORK_FLOODING=Es posible que esta búsqueda arroje muchos resultados y demore la red. Estáseguro que desea continuar?
 #### ERROR_BROWSE_FAILED=Could not browse files on the requested host. This machine is probably not accepting more incoming connections.
-ERROR_BROWSE_FAILED=No se pudieron buscar los archivos en la computadora central especificada. Dicha másuina probablemente no acepte más conexiones entrantes.
+ERROR_BROWSE_FAILED=No se pudieron buscar los archivos en la computadora central especificada. Dicha máquina probablemente no acepte más conexiones entrantes.
 #### ERROR_INVALID_SAVE_DIRECTORY=Invalid folder for saving files. Please use another folder or revert to the default.
 ERROR_INVALID_SAVE_DIRECTORY=Carpeta inválida para guardar archivos. Por favor, utilice otro directorio o vuelva al predeterminado.
 #### ERROR_INVALID_SAVE_DIRECTORY_WINDOW=Your save folder is not valid. It may have been deleted, you may not have permissions to write to it, or there may be another problem. Please choose a different folder.
@@ -2452,25 +2452,25 @@ ERROR_CCPUBLISHER_MISSING_COMMERCIAL=Por favor introduzca el título del archivo 
 #### ERROR_CCPUBLISHER_MISSING_URL=Please enter a verification URL for the license.
 ERROR_CCPUBLISHER_MISSING_URL=Por favor introduzca una URL de verificación para la licencia.
 #### ERROR_CCPUBLISHER_DESCRIPTION_START=The description for this file is too short. Please enter at least {0} words.
-#? ERROR_CCPUBLISHER_DESCRIPTION_START=
+ERROR_CCPUBLISHER_DESCRIPTION_START=La descripción para este archivo es muy corta. Por favor introduzca al menos {0} palabras.
 #### ERROR_CCPUBLISHER_URL=Please enter a valid verification URL for the license.
-#? ERROR_CCPUBLISHER_URL=
+ERROR_CCPUBLISHER_URL=Por favor introduzca una URL de verificación válida para las licencias.
 #### ERROR_CCPUBLISHER_DATE=Please enter a valid year for the file you want to publish.
-#? ERROR_CCPUBLISHER_DATE=
+ERROR_CCPUBLISHER_DATE=Por favor introduzca un año válido para el archivo que desea publicar.
 #### ERROR_CCPUBLISHER_IDENTIFIER_UNAVAILABLE=The default Internet Archive identifier for this file and username is allready taken. Please modify it below or press cancel to return.
-#? ERROR_CCPUBLISHER_IDENTIFIER_UNAVAILABLE=
+ERROR_CCPUBLISHER_IDENTIFIER_UNAVAILABLE=El identificador por defecto para este archivo en el Internet Archive y el nombre de usuario ya fueron tomados. Por favor modifique los datos de abajo o presione cancelar para volver.
 #### ERROR_CCPUBLISHER_MISSING_ARCHIVE_LOGIN=Please enter your Internet Archive username and password.
-#? ERROR_CCPUBLISHER_MISSING_ARCHIVE_LOGIN=
+ERROR_CCPUBLISHER_MISSING_ARCHIVE_LOGIN=Por favor introduzca su nombre de usuario y contraseña del Internet Archive.
 #### ERROR_CCPUBLISHER_INTERNETARCHIVE_COMMUNICATION=There was an error communicating with the Internet Archive. Do you want to try again?
-#? ERROR_CCPUBLISHER_INTERNETARCHIVE_COMMUNICATION=
+ERROR_CCPUBLISHER_INTERNETARCHIVE_COMMUNICATION=Hubo un error en la comunicación con el Internet Archive. Desea intentar de nuevo?
 #### ERROR_INTERNETARCHIVE_CONNECTION=There was an error while connecting to the internet archive.
-#? ERROR_INTERNETARCHIVE_CONNECTION=
+ERROR_INTERNETARCHIVE_CONNECTION=Hubo un error mientras se realizaba la conexión con el Internet Archive
 #### ERROR_INTERNETARCHIVE_LOGIN=There was an error while logging in to the Internet Archive. Please check your username and password and try again.
-#? ERROR_INTERNETARCHIVE_LOGIN=
+ERROR_INTERNETARCHIVE_LOGIN=Hubo un error mientras se hacia verificaba su identificación en el Internet Archive. Por favor revise su nombre de usuario y contraseña e intente de nuevo.
 #### ERROR_INTERNETARCHIVE_DIRECTORY=There was an error while trying to access the upload directory.
-#? ERROR_INTERNETARCHIVE_DIRECTORY=
+ERROR_INTERNETARCHIVE_DIRECTORY=Hubo un error mientras intentaba acceder al directorio de carga.
 #### ERROR_INTERNETARCHIVE_COMMUNICATION=There was an error communicating with the Internet Archive. Please try again later.
-#? ERROR_INTERNETARCHIVE_COMMUNICATION=
+ERROR_INTERNETARCHIVE_COMMUNICATION=Hubo un error de comunicación con el Internet Archive. Por favor intente más tarde.
 ################################################################################
 # Messages for Licensing
 ################################################################################
@@ -2597,7 +2597,7 @@ OPTIONS_SEARCH_QUALITY_MAIN_TITLE=Calidad
 #### OPTIONS_SEARCH_SPEED_MAIN_TITLE=Speed
 OPTIONS_SEARCH_SPEED_MAIN_TITLE=Velocidad
 #### OPTIONS_SEARCH_JUNK_MAIN_TITLE=Junk
-#? OPTIONS_SEARCH_JUNK_MAIN_TITLE=
+OPTIONS_SEARCH_JUNK_MAIN_TITLE=Basura
 #### OPTIONS_FILTERS_MAIN_TITLE=Filters
 OPTIONS_FILTERS_MAIN_TITLE=Filtros
 #### OPTIONS_RESULTS_MAIN_TITLE=Keywords
@@ -3348,27 +3348,27 @@ OPTIONS_PROXY_LOGIN_PASSWORD_LABEL=Contraseña
 # in the options window
 ################################################################################
 #### OPTIONS_SEARCH_JUNK_TITLE=Junk
-#? OPTIONS_SEARCH_JUNK_TITLE=
+OPTIONS_SEARCH_JUNK_TITLE=Basura
 #### OPTIONS_SEARCH_JUNK_LABEL=You can disable LimeWire's junk filter and delete all previously collected filter data here, if your junk filter is rating too many files as spam.
-#? OPTIONS_SEARCH_JUNK_LABEL=
+OPTIONS_SEARCH_JUNK_LABEL=Ud. puede deshabilitar el filtro de Basura de LimeWire y eliminar todos los datos recolectados con respecto al filtraje aqui, si su puntuacion de filtrado de basura esta marcando demasiados archivos como spam.
 #### OPTIONS_SEARCH_JUNK_DISPLAY_IN_PLACE=Display junk in place
-#? OPTIONS_SEARCH_JUNK_DISPLAY_IN_PLACE=
+OPTIONS_SEARCH_JUNK_DISPLAY_IN_PLACE=Mostrar la basura recolectada
 #### OPTIONS_SEARCH_JUNK_MOVE_TO_BOTTOM=Display junk at the bottom of search results
-#? OPTIONS_SEARCH_JUNK_MOVE_TO_BOTTOM=
+OPTIONS_SEARCH_JUNK_MOVE_TO_BOTTOM=Mostrar la basura al final de los resultados de búsqueda
 #### OPTIONS_SEARCH_JUNK_HIDE_SPAM=Do not display junk
-#? OPTIONS_SEARCH_JUNK_HIDE_SPAM=
+OPTIONS_SEARCH_JUNK_HIDE_SPAM=No mostrar Basura
 #### OPTIONS_SEARCH_JUNK_DISPLAY=Display:
-#? OPTIONS_SEARCH_JUNK_DISPLAY=
+OPTIONS_SEARCH_JUNK_DISPLAY=Mostrar:
 #### OPTIONS_SEARCH_JUNK_THRESHOLD=Sensitivity:
-#? OPTIONS_SEARCH_JUNK_THRESHOLD=
+OPTIONS_SEARCH_JUNK_THRESHOLD=Sensibilidad:
 #### OPTIONS_SEARCH_JUNK_THRESHOLD_LAX=Relaxed
-#? OPTIONS_SEARCH_JUNK_THRESHOLD_LAX=
+OPTIONS_SEARCH_JUNK_THRESHOLD_LAX=Relajado
 #### OPTIONS_SEARCH_JUNK_THRESHOLD_STRICT=Strict
-#? OPTIONS_SEARCH_JUNK_THRESHOLD_STRICT=
+OPTIONS_SEARCH_JUNK_THRESHOLD_STRICT=Estricto
 #### OPTIONS_SEARCH_JUNK_THRESHOLD_TOOLTIP=Adjust the sensitivity of LimeWire's junk filter
-#? OPTIONS_SEARCH_JUNK_THRESHOLD_TOOLTIP=
+OPTIONS_SEARCH_JUNK_THRESHOLD_TOOLTIP=Ajuste la sensibilidad del filtro de Basura de LimeWire
 #### OPTIONS_SEARCH_JUNK_RESET_LABEL=Forget Training Data
-#? OPTIONS_SEARCH_JUNK_RESET_LABEL=
+OPTIONS_SEARCH_JUNK_RESET_LABEL=Olvidar los Datos de Entrenamiento
 
 ################################################################################
 # Key/value pairs for top-level stats panels
