Fixed missing accents, fixes to make text friendlier to spanish users. Some translation errors were fixed aswell.

--- a/lib/messagebundles/MessagesBundle_es.properties
+++ b/lib/messagebundles/MessagesBundle_es.properties
@@ -197,7 +197,7 @@ ABOUT_SCROLL_CHECK_BOX_LABEL=Avanzar automáticamente
 #### ABOUT_BUTTON_TIP=Close This Window
 ABOUT_BUTTON_TIP=Cerrar la ventana Acerca de.
 #### ABOUT_INTRODUCTION=Inspired by LimeWire's owner, Mark Gorton, the LimeWire project is a collaborative <a href="http://www.limewire.org/">open source effort</a> involving programmers and researchers from all over the world. The collaborative nature of Gnutella is also reflected in the Gnutella Developers Forum (GDF), of which LimeWire is a participant. The members of the GDF work in the trenches every day to make Gnutella a truly innovative collection of protocols that is constantly improving -- a testament to the power of open protocols and open standards.
-ABOUT_INTRODUCTION=Inspirado por el creador de LimeWire, Mark Gorton, el Projecto LimeWire es un esfuerzo colaborativo de <a href="http://www.limewire.org/">Código Abierto</a> que envuelve programadores e investigadores de todas partes del mundo. La naturaleza colaborativa de Gnutella se ver reflajada tambien en el foro de desarrolladores Gnutella (GDF), en el cual LimeWire es un participante. Los miembros del GDF trabajan en las trincheras todos los días para hacer que Gnutella sea una colección innovadora de protocolos que siempre esta en constante mejoramiento -- un testamento del poder de los protocolos abiertos y de los está ndares abiertos.
+ABOUT_INTRODUCTION=Inspirado por el creador de LimeWire, Mark Gorton, el Projecto LimeWire es un esfuerzo colaborativo de <a href="http://www.limewire.org/">Código Abierto</a> que envuelve programadores e investigadores de todas partes del mundo. La naturaleza colaborativa de Gnutella se ver reflajada tambien en el foro de desarrolladores Gnutella (GDF), en el cual LimeWire es un participante. Los miembros del GDF trabajan en las trincheras todos los días para hacer que Gnutella sea una colección innovadora de protocolos que siempre esta en constante mejoramiento -- un testamento del poder de los protocolos abiertos y de los estándares abiertos.
 #### ABOUT_DEV_BLURB=LimeWire is also, of course, the result of the countless hours of work by LimeWire's developers:
 ABOUT_DEV_BLURB=LimeWire es tambien, por supuesto, el resultado de incontables horas de trabajo del equipo de desarrolladores de LimeWire:
 #### ABOUT_BIZDEV_BLURB=Behind the scenes business strategy and day-to-day affairs are handled by LimeWire's business developers:
@@ -241,7 +241,7 @@ TOTD_LOADING_TIPS=Cargando consejos...
 #### GETTING_STARTED_TITLE=Getting Started
 GETTING_STARTED_TITLE=Primer uso
 #### GETTING_STARTED_CONTENTS=To start using LimeWire, find the text field on the left, type in what you are looking for and click the "Search" button. If you are looking for only one type of content (music, video, etc...), you can narrow your search results by using the buttons above the text field.
-GETTING_STARTED_CONTENTS=Para comenzar a usar LimeWire busque el campo de texto que se encuentra a la izquierda, escriba lo que busca y haga clic en el botón "buscar". Si busca un solo tipo de contenido (msica, video, etc.), puede restringir los resultados de su búsqueda usando los botónes que se encuentran arriba del campo de texto.
+GETTING_STARTED_CONTENTS=Para comenzar a usar LimeWire busque el campo de texto que se encuentra a la izquierda, escriba lo que busca y haga clic en el botón "buscar". Si busca un solo tipo de contenido (música, video, etc.), puede restringir los resultados de su búsqueda usando los botónes que se encuentran arriba del campo de texto.
 
 ###################################################################
 # Key/value pairs for the Going Pro image.
@@ -456,7 +456,7 @@ MENU_VIEW_CONSOLE_MNEMONIC=O
 #### MENU_VIEW_CONSOLE_ACCESSIBLE=Show Console Window
 MENU_VIEW_CONSOLE_ACCESSIBLE=Mostrar ventana de consola
 #### MENU_VIEW_THEMES_TITLE=Apply Skins
-MENU_VIEW_THEMES_TITLE=Aplicar las carátulas
+MENU_VIEW_THEMES_TITLE=Cambiar Carátulas (Apariencia)
 #### MENU_VIEW_THEMES_TITLE_MNEMONIC=A
 MENU_VIEW_THEMES_TITLE_MNEMONIC=A
 #### MENU_VIEW_THEMES_GET_MORE=Get More Skins
@@ -855,7 +855,7 @@ DOWNLOAD_KILL_BUTTON_COMPLETED_TIP=Borrar Descargas Seleccionadas
 #### DOWNLOAD_POPUP_MENU_KILL_COMPLETED_LABEL=Clear Download
 DOWNLOAD_POPUP_MENU_KILL_COMPLETED_LABEL=Borrar Descarga
 #### DOWNLOAD_RESUME_BUTTON_LABEL=Resume
-DOWNLOAD_RESUME_BUTTON_LABEL=Reanudar
+DOWNLOAD_RESUME_BUTTON_LABEL=Continuar
 #### DOWNLOAD_RESUME_BUTTON_TIP=Reattempt Selected Downloads
 DOWNLOAD_RESUME_BUTTON_TIP=Reintentar la descarga.
 #### DOWNLOAD_SOURCES_BUTTON_LABEL=Find Sources
@@ -908,7 +908,7 @@ LIBRARY_PUBLISH_BUTTON_LABEL=Publicar
 #### LIBRARY_PUBLISH_BUTTON_TIP=Publish under Creative Commons License
 LIBRARY_PUBLISH_BUTTON_TIP=Publicar bajo Licencia Creative Commons
 #### LIBRARY_RESUME_BUTTON_LABEL=Resume
-LIBRARY_RESUME_BUTTON_LABEL=Reanudar
+LIBRARY_RESUME_BUTTON_LABEL=Continuar
 #### LIBRARY_RESUME_BUTTON_TIP=Continue Downloading Selected Incomplete File
 LIBRARY_RESUME_BUTTON_TIP=Continuar la descarga del archivo incompleto seleccionado.
 #### LIBRARY_RENAME_BUTTON_LABEL=Rename
@@ -1110,7 +1110,7 @@ STATISTICS_CONNECTION_CONNECTING_TIP=Actualmente se está conectando a la red.
 #### STATISTICS_CONNECTION_POOR=Poor
 STATISTICS_CONNECTION_POOR=Insuficiente
 #### STATISTICS_CONNECTION_POOR_TIP=You are connected to few hosts and have an unstable connection the network
-STATISTICS_CONNECTION_POOR_TIP=Estáconectado a pocas computadoras centrales y tiene una conexión inestable a la red.
+STATISTICS_CONNECTION_POOR_TIP=Está conectado a pocas computadoras centrales y tiene una conexión inestable a la red.
 #### STATISTICS_CONNECTION_FAIR=Fair
 STATISTICS_CONNECTION_FAIR=Aceptable
 #### STATISTICS_CONNECTION_FAIR_TIP=Your connection to the network is getting stronger
@@ -1118,7 +1118,7 @@ STATISTICS_CONNECTION_FAIR_TIP=Su conexión a la red está mejorando.
 #### STATISTICS_CONNECTION_GOOD=Good
 STATISTICS_CONNECTION_GOOD=Buena
 #### STATISTICS_CONNECTION_GOOD_TIP=You are not yet fully connected to the network, but have a very good connection
-STATISTICS_CONNECTION_GOOD_TIP=An no está totalmente conectado a la red, pero tiene una buena conexión.
+STATISTICS_CONNECTION_GOOD_TIP=Ud. no está totalmente conectado a la red, pero tiene una buena conexión.
 #### STATISTICS_CONNECTION_EXCELLENT=Excellent
 STATISTICS_CONNECTION_EXCELLENT=Excelente
 #### STATISTICS_CONNECTION_EXCELLENT_TIP=Your connection to the network is very strong
@@ -1144,7 +1144,7 @@ STATISTICS_CONNECTION_WAKING_UP_TIP=LimeWire está despertando del modo durmiente
 #### DOWNLOAD_POPUP_MENU_KILL_DOWNLOAD=Cancel Download
 DOWNLOAD_POPUP_MENU_KILL_DOWNLOAD=Detener la descarga
 #### DOWNLOAD_POPUP_MENU_RESUME=Resume Download
-DOWNLOAD_POPUP_MENU_RESUME=Forzar la reanudación
+DOWNLOAD_POPUP_MENU_RESUME=Continue la descarga
 #### DOWNLOAD_POPUP_MENU_SOURCES=Find More Sources for Download
 DOWNLOAD_POPUP_MENU_SOURCES=Buscar más fuentes para Descargar
 #### DOWNLOAD_POPUP_MENU_PAUSE=Pause Download
@@ -1435,7 +1435,7 @@ CV_TABLE_STRING_PEERS=Pares
 #### CV_TABLE_STRING_STANDARD=0.6
 CV_TABLE_STRING_STANDARD=0.6
 #### CV_TABLE_STRING_STANDARDS=Standard
-CV_TABLE_STRING_STANDARDS=Estádar
+CV_TABLE_STRING_STANDARDS=Estándar
 #### CV_TABLE_STRING_INCOMING=Incoming
 CV_TABLE_STRING_INCOMING=Entrante
 #### CV_TABLE_STRING_OUTGOING=Outgoing
@@ -1960,9 +1960,9 @@ CC_PUBLISHER_RDF_OUTPUT=Para publicar su archivo, por favor introduzca el siguie
 #### CC_PUBLISHER_COPY_BUTTON=Copy to Clipboard
 CC_PUBLISHER_COPY_BUTTON=Copiar al Portapapeles
 #### CC_PUBLISHER_RDFNOTGENERATED_WARNING=You have to generate an up-to-date license RDF to create the verification link for you Creative Commons license.\n\nAre you sure you want to continue without generating the license?
-CC_PUBLISHER_RDFNOTGENERATED_WARNING=Debe generar una licencia RDF actualizada para crear el enlace de verificación para su licencia Creative Commons.\n\nEstáseguro que desea continuar sin generar la licencia?
+CC_PUBLISHER_RDFNOTGENERATED_WARNING=Debe generar una licencia RDF actualizada para crear el enlace de verificación para su licencia Creative Commons.\n\nEstá seguro que desea continuar sin generar la licencia?
 #### CC_PUBLISHER_REMOVELICENSE_LABEL=Are you sure you want to permanently remove the license from your local copy of this file?
-CC_PUBLISHER_REMOVELICENSE_LABEL=Estáseguro de que desea eliminar permanentemente la licencia de su copia local de este archivo?
+CC_PUBLISHER_REMOVELICENSE_LABEL=Está seguro de que desea eliminar permanentemente la licencia de su copia local de este archivo?
 #### CC_PUBLISHER_LICENSEREMOVED_LABEL=Please press OK to permanently remove license.
 CC_PUBLISHER_LICENSEREMOVED_LABEL=Por favor presione OK para eliminar permanentemente la licencia.
 #### CC_PUBLISHER_ARCHIVE_USERNAME_LABEL=Username:
@@ -2201,7 +2201,7 @@ MESSAGE_WARNING_CAPTION=Advertencia
 #### MESSAGE_SHARE_SAVE_DIR=Would you like to add the save folder to your list of shared folders? Subfolders of this folder will also be shared.
 MESSAGE_SHARE_SAVE_DIR=Desea agregar el directorio guardado a su lista de directorios compartidos? También se compartirán los subdirectorios de este directorio.
 #### MESSAGE_CONFIRM_UNSHARE_DIRECTORY=Are you sure you want to stop sharing this folder?
-MESSAGE_CONFIRM_UNSHARE_DIRECTORY=Estáseguro que desea dejar de compartir este directorio?
+MESSAGE_CONFIRM_UNSHARE_DIRECTORY=Está seguro que desea dejar de compartir este directorio?
 #### MESSAGE_CANNOT_UNSHARE_DIRECTORY=LimeWire cannot stop sharing this folder.
 MESSAGE_CANNOT_UNSHARE_DIRECTORY=LimeWire no puede dejar de compartir esta carpeta.
 #### MESSAGE_OVERWRITE_EXISTING_FILE=Overwrite existing file
@@ -2209,7 +2209,7 @@ MESSAGE_OVERWRITE_EXISTING_FILE=Sobreescribir archivo existente
 #### MESSAGE_FILE_LAUNCHING_SECURITY_MESSAGE=LimeWire will not launch the specified file for security reasons.
 MESSAGE_FILE_LAUNCHING_SECURITY_MESSAGE=LimeWire no ejecutará el archivo especificado por razones de seguridad.
 #### MESSAGE_CONFIRM_FILE_DELETE=Are you sure you want to delete the selected file(s)?
-MESSAGE_CONFIRM_FILE_DELETE=Está seguro que desea eliminar el/los archivo(s) seleccionado(s)?
+MESSAGE_CONFIRM_FILE_DELETE=Está seguro que desea eliminar el/los archivo(s) seleccionado(s) de su disco duro? No podrá recuperar el/los archivo(s) de efectuar esta operación.
 #### MESSAGE_UNABLE_TO_DELETE_FILE_START=Unable to delete the file
 MESSAGE_UNABLE_TO_DELETE_FILE_START=No se puede eliminar el archivo
 #### MESSAGE_UNABLE_TO_DELETE_FILE_END=. It may be in use by another application.
@@ -2352,7 +2352,7 @@ ERROR_INCOMING_CONNECTIONS=No se pudo escuchar el socket para conexiones entrant
 #### ERROR_THREE_CHARACTER_SEARCH=Your search must be at least three characters to avoid congesting the network.
 ERROR_THREE_CHARACTER_SEARCH=Su búsqueda debe tener por lo menos tres caracteres para evitar congestionar la red.
 #### ERROR_NETWORK_FLOODING=This search may return lots of results and slow the network. Are you sure you want to continue?
-ERROR_NETWORK_FLOODING=Es posible que esta búsqueda arroje muchos resultados y demore la red. Estáseguro que desea continuar?
+ERROR_NETWORK_FLOODING=Es posible que esta búsqueda arroje muchos resultados y demore la red. Está seguro que desea continuar?
 #### ERROR_BROWSE_FAILED=Could not browse files on the requested host. This machine is probably not accepting more incoming connections.
 ERROR_BROWSE_FAILED=No se pudieron buscar los archivos en la computadora central especificada. Dicha máquina probablemente no acepte más conexiones entrantes.
 #### ERROR_INVALID_SAVE_DIRECTORY=Invalid folder for saving files. Please use another folder or revert to the default.
@@ -2581,7 +2581,7 @@ OPTIONS_BUGS_MAIN_TITLE=Informes de error
 #### OPTIONS_GUI_MAIN_TITLE=View
 OPTIONS_GUI_MAIN_TITLE=Ver
 #### OPTIONS_POPUPS_MAIN_TITLE=Popups
-OPTIONS_POPUPS_MAIN_TITLE=Mens emergentes
+OPTIONS_POPUPS_MAIN_TITLE=Menús emergentes
 #### OPTIONS_AUTOCOMPLETE_MAIN_TITLE=Autocompletion
 OPTIONS_AUTOCOMPLETE_MAIN_TITLE=Autocompletar texto
 #### OPTIONS_THEME_MAIN_TITLE=Skin
@@ -2632,7 +2632,7 @@ OPTIONS_LOCALIZE_LABEL=Puede personalizar LimeWire para que muestre el idioma y 
 #### OPTIONS_LOCALIZE_LANGUAGE_BOX_LABEL=Language
 OPTIONS_LOCALIZE_LANGUAGE_BOX_LABEL=Idioma
 #### OPTIONS_LOCALIZE_COUNTRY_BOX_LABEL=Country
-OPTIONS_LOCALIZE_COUNTRY_BOX_LABEL=Paño
+OPTIONS_LOCALIZE_COUNTRY_BOX_LABEL=País
 
 ################################################################################
 # Key/value pairs for the save directory options window item
@@ -2756,7 +2756,7 @@ OPTIONS_DOWNLOAD_MAX_TITLE=Descargas másimas
 #### OPTIONS_DOWNLOAD_MAX_LABEL=You can set the maximum number of simultaneous downloads.
 OPTIONS_DOWNLOAD_MAX_LABEL=Puede establecer la cantidad másima de descargas simultáneas.
 #### OPTIONS_DOWNLOAD_MAX_NUMBER_LABEL=Maximum Downloads:
-OPTIONS_DOWNLOAD_MAX_NUMBER_LABEL=Descargas másimas:
+OPTIONS_DOWNLOAD_MAX_NUMBER_LABEL=Descargas máximas:
 
 ################################################################################
 # Key/Value pairs for the options for automatically clearing downloads
@@ -2970,11 +2970,11 @@ OPTIONS_ITUNES_PREFERENCE_LABEL=Puede activar el soporte de iTunes (Mac OS X nic
 #### OPTIONS_ITUNES_DAAP_PREFERENCE_TITLE=Sharing
 OPTIONS_ITUNES_DAAP_PREFERENCE_TITLE=Compartir
 #### OPTIONS_ITUNES_DAAP_PREFERENCE_LABEL=You can share your Music on the Local Area Network and make it accessible for iTunes and other Digital Audio Access Protocol (DAAP) enabled Players.\n\nEnable Compatability Mode if you experience problems with iTunes Sharing. This mode uses more resources and is slower, but may fix problems.
-OPTIONS_ITUNES_DAAP_PREFERENCE_LABEL=Puede compartir su msica en la red de area local y hacerla accesible para iTunes y otros programas con Protocolos de acceso de audio digital (DAAP).\n\nPermita el modo de compatibilidad si tiene problemas al compartir en iTunes. Este modo utiliza más recursos y es más lento, pero puede reparar problemas.
+OPTIONS_ITUNES_DAAP_PREFERENCE_LABEL=Puede compartir su música en la red de area local y hacerla accesible para iTunes y otros programas con Protocolos de acceso de audio digital (DAAP).\n\nPermita el modo de compatibilidad si tiene problemas al compartir en iTunes. Este modo utiliza más recursos y es más lento, pero puede reparar problemas.
 #### OPTIONS_ITUNES_DAAP_SUPPORT_DAAP_ENABLED_LABEL=Share My Music:
-OPTIONS_ITUNES_DAAP_SUPPORT_DAAP_ENABLED_LABEL=Compartir mi msica:
+OPTIONS_ITUNES_DAAP_SUPPORT_DAAP_ENABLED_LABEL=Compartir mi música:
 #### OPTIONS_ITUNES_DAAP_SUPPORT_SERVICE_NAME_LABEL=Shared Name:
-OPTIONS_ITUNES_DAAP_SUPPORT_SERVICE_NAME_LABEL=Nombre de compartir:
+OPTIONS_ITUNES_DAAP_SUPPORT_SERVICE_NAME_LABEL=Nombre de recurso compartido:
 #### OPTIONS_ITUNES_DAAP_SUPPORT_USE_BIO_LABEL=Compatibility Mode:
 OPTIONS_ITUNES_DAAP_SUPPORT_USE_BIO_LABEL=Modo de compatibilidad:
 
@@ -3033,7 +3033,7 @@ OPTIONS_DO_NOT_ASK_AGAIN=No volver a mostrar este mensaje
 #### OPTIONS_ALWAYS_USE_ANSWER=Always use this answer
 OPTIONS_ALWAYS_USE_ANSWER=Usar siempre esta respuesta
 #### OPTIONS_POPUPS_TITLE=Popups
-OPTIONS_POPUPS_TITLE=Mens emergentes
+OPTIONS_POPUPS_TITLE=Menús emergentes
 #### OPTIONS_POPUPS_LABEL=Redisplay messages for which you have chosen 'Do not display this message again' or 'Always use this answer'.
 OPTIONS_POPUPS_LABEL=Volver a mostrar los mensaje para los que ha elegido 'no volver a mostrar este mensaje' o 'usar siempre esta respuesta'.
 #### OPTIONS_POPUPS_DISPLAY_CHECK_BOX_LABEL=Revert to Default:
@@ -3078,7 +3078,7 @@ THEME_CHANGED_MESSAGE=Para incorporar la nueva carátula debe reiniciar LimeWire.
 #### OPTIONS_SKIN_TITLE=Skin Options
 OPTIONS_SKIN_TITLE=Opciones de carátula
 #### OPTIONS_SKIN_LABEL=Choose LimeWire's skin. Using SkinLF developed by L2FProd.com (http://www.L2FProd.com/).
-OPTIONS_SKIN_LABEL=Elegir carátula de LimeWire. Estáusando SkinLF desarrollada por L2Fprod.com (http://www.L2Fprod.com/).
+OPTIONS_SKIN_LABEL=Elegir carátula de LimeWire. Está usando SkinLF desarrollada por L2Fprod.com (http://www.L2Fprod.com/).
 #### OPTIONS_SKIN_BROWSE_BOX_LABEL=Skin:
 OPTIONS_SKIN_BROWSE_BOX_LABEL=Carátula:
 #### OPTIONS_SKIN_BROWSE_BUTTON_LABEL=Browse Skins...
@@ -3131,11 +3131,11 @@ SKIN_EDITOR_BROWSE_BUTTON_TIP=Explorar carátulas.
 # in the options window
 ################################################################################
 #### OPTIONS_SEARCH_MAX_TITLE=Maximum Searches
-OPTIONS_SEARCH_MAX_TITLE=Bsquedas másimas
+OPTIONS_SEARCH_MAX_TITLE=Bsquedas máximas
 #### OPTIONS_SEARCH_MAX_LABEL=You can set the maximum number of simultaneous searches you can perform.
 OPTIONS_SEARCH_MAX_LABEL=Puede establecer la cantidad másima de búsquedas simultáneas que puede realizar.
 #### OPTIONS_SEARCH_MAX_NUMBER_LABEL=Maximum Searches:
-OPTIONS_SEARCH_MAX_NUMBER_LABEL=Bsquedas másimas:
+OPTIONS_SEARCH_MAX_NUMBER_LABEL=Búsquedas máximas:
 
 ################################################################################
 # Key/Value pairs for search quality options in the options window
