updated per zlatin's comments.

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -766,6 +766,7 @@ UPLOAD_TABLE_STRING_MALFORMED_REQUEST=Malformed Request
 UPLOAD_TABLE_STRING_COMPLETE=Complete
 UPLOAD_TABLE_STRING_BANNED_GREEDY=Banned Greedy Servent
 UPLOAD_TABLE_STRING_HASH_TREE=Uploading Hash Tree
+UPLOAD_TABLE_STRING_VALIDATING=Validation Required
 UPLOAD_TABLE_STRING_FNF=File Not Found
 UPLOAD_TABLE_STRING_QUEUED=Queued at
 UPLOAD_STRING_KBPSEC=KB/s
