The translation for "Does not work with HTTP Proxies" was missing in the German MessagesBundle!

--- a/lib/messagebundles/MessagesBundle_de.properties
+++ b/lib/messagebundles/MessagesBundle_de.properties
@@ -3337,7 +3337,7 @@ OPTIONS_PROXY_LOGIN_TITLE=Einstellungen zur Authentifizierung
 #### OPTIONS_PROXY_LOGIN_LABEL=Configure username and password to be used for the proxy.
 OPTIONS_PROXY_LOGIN_LABEL=Benutzernamen und Kennwort für den Proxy einstellen.
 #### OPTIONS_PROXY_LOGIN_AUTHENTICATE_LABEL=Enable Authentication (Does Not Work for HTTP Proxies):
-OPTIONS_PROXY_LOGIN_AUTHENTICATE_LABEL=Authentifizierung einschalten
+OPTIONS_PROXY_LOGIN_AUTHENTICATE_LABEL=Authentifizierung einschalten (funktioniert nicht mit HTTP Proxies):
 #### OPTIONS_PROXY_LOGIN_USERNAME_LABEL=Username:
 OPTIONS_PROXY_LOGIN_USERNAME_LABEL=Benutzername:
 #### OPTIONS_PROXY_LOGIN_PASSWORD_LABEL=Password:
