Message Bundle Aditions for the Language Status

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -355,6 +355,7 @@ MENU_HELP_ERROR_ACCESSIBLE=Generate a Popup Error for Testing
 ################################################################################
 STATUS_BAR_SHOW_CONNECTION_QUALITY=Show Connection Quality
 STATUS_BAR_SHOW_SHARED_FILES_COUNT=Show Shared Files Count
+STATUS_BAR_SHOW_LANGUAGE_STATUS=Show Language Status
 STATUS_BAR_SHOW_FIREWALL_STATUS=Show Firewall Status
 STATUS_BAR_SHOW_BANDWIDTH_CONSUMPTION=Show Bandwidth Consumption
 STATUS_BAR_SHOW_MEDIA_PLAYER=Show Media Player
