--- a/lib/messagebundles/MessagesBundle_es.properties
+++ b/lib/messagebundles/MessagesBundle_es.properties
@@ -596,6 +596,8 @@ MENU_HELP_ERROR_ACCESSIBLE=Generar una ventana de error para pruebas.
 STATUS_BAR_SHOW_CONNECTION_QUALITY=Mostrar Calidad de conexión
 #### STATUS_BAR_SHOW_SHARED_FILES_COUNT=Show Shared Files Count
 STATUS_BAR_SHOW_SHARED_FILES_COUNT=Mostrar Nmero de Archivos Compartidos
+#### STATUS_BAR_SHOW_LANGUAGE_STATUS=Show Language Status
+STATUS_BAR_SHOW_LANGUAGE_STATUS=Mostrar Idioma Actual
 #### STATUS_BAR_SHOW_FIREWALL_STATUS=Show Firewall Status
 STATUS_BAR_SHOW_FIREWALL_STATUS=Mostrar Estado del Cortafuegos
 #### STATUS_BAR_SHOW_BANDWIDTH_CONSUMPTION=Show Bandwidth Consumption
