expand concept of content authority, allow tables to require a tooltip to be shown, start upload/download immediate, fail later, show tooltip explaining + link.

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -705,8 +705,8 @@ DOWNLOAD_STATUS_HASHING=Verifying File Contents...
 DOWNLOAD_STATUS_SAVING=Saving File...
 DOWNLOAD_STATUS_PAUSING=Pausing...
 DOWNLOAD_STATUS_PAUSED=Paused
-DOWNLOAD_STATUS_VALIDATING=Validating...
-DOWNLOAD_STATUS_INVALID=Invalid
+DOWNLOAD_STATUS_INVALID=Content Removed
+DOWNLOAD_INVALID_EXPLAIN=The owner of this content has requested that this file be removed from the network.  To learn more, double-click on the download (or click preview).
 DOWNLOAD_AWAITING_SOURCES=A more specific search may be required...
 # {0} the name of the skin
 # {1} the localized name of the menu item "Refresh Skins"
