--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -294,6 +294,7 @@ MENU_VIEW_THEMES_USE_DEFAULT_MNEMONIC=D
 MENU_VIEW_THEMES_USE_DEFAULT_ACCESSIBLE=Use your default skin
 MENU_VIEW_LANGS_TITLE=Change Language
 MENU_VIEW_LANGS_TITLE_MNEMONIC=H
+MENU_VIEW_LANGS_TITLE_ACCESSIBLE=Select your Language Prefereces
 MENU_VIEW_LANGS_RESTART_REQUIRED=LimeWire must be restarted for the new language to take effect.
 MENU_VIEW_LANGS_TRANSLATE_LIMEWIRE=Help Translate LimeWire
 MENU_VIEW_LANGS_TRANSLATE_LIMEWIRE_MNEMONIC=T
